--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
             <audio controls id="audioPlayer"></audio>
         </div>
     </div>
+    <button id="sortButton">Most Played Songs</button>
+    <br><br>
+
 
     <div id="searchResults"></div>
-
+    
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </body>
