--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             <audio controls id="audioPlayer"></audio>
         </div>
     </div>
+    <div id="recommendations"></div>
     <button id="sortButton">Most Played Songs</button>
+    <br><br>
+    <button id="sendMostPlayedSong">Recommend songs</button>
     <br><br>
 
 
