--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <div id="outer-wrapper">
-        <div id="leftPanel" class="side-panel"> 
-            <div id="recommendations"></div>
-        </div>
         <div id="wrapper">
+            <div id="leftPanel" class="side-panel"> 
+                <div id="recommendations"></div>
+            </div>
             <div id="songList"></div>
-            <img src="" alt="">
+            <img src="Covers/bg.png" alt="Music Player Pic">
             <audio id="audioPlayer"></audio>
             <input type="range" value="0" id="progress">
             <div class="controls">
